# drakhtar-i18n

./: CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: continuous-integration.yml
assets/language/numeric/: latn.txt
docs/: README.md  assets.md  fallbacks.md  getting-started.md
include/: LocaleManager.h
include/Format/: Number.h
include/Format/Numbers/: INumber.h  Latin.h
include/Format/Numbers/Systems/: ISystem.h  Latin.h
include/Format/Strings/: ITransformer.h  LowercaseTransformer.h  TransformerManager.h  UppercaseTransformer.h
include/IO/: FileReader.h  FolderReader.h
include/Information/: Locale.h  LocaleComponents.h  NumberMetadata.h
include/Parser/: CommentParser.h  FileParser.h  IParser.h  LineParser.h  Tokenizer.h
include/Parser/Strings/: StringContent.h  StringParser.h
include/Utils/: DigitBuffer.h  NumberMetadata.h  Util.h
languages/: CMakeLists.txt
languages/.numeric/: latn.txt
languages/en/: .meta.txt
languages/en-US/: .meta.txt
languages/es/: .meta.txt
languages/es-ES/: .meta.txt
scripts/: windows-build.ps1  windows-format.ps1  windows-test.cmd
src/: CMakeLists.txt  LocaleManager.cpp
src/Format/: Number.cpp
src/Format/Numbers/: INumber.cpp
src/Format/Strings/: TransformerManager.cpp
src/Information/: Locale.cpp  LocaleComponents.cpp  NumberMetadata.cpp
src/Parser/: CommentParser.cpp  FileParser.cpp  LineParser.cpp
src/Parser/Strings/: StringContent.cpp  StringParser.cpp
src/Utils/: NumberMetadata.cpp  Util.cpp
tests/: CMakeLists.txt  LocaleManager.cpp
tests/Format/Numbers/Systems/: Latin.cpp
tests/Format/Strings/: LowercaseTransformer.cpp  TransformerManager.cpp  UppercaseTransformer.cpp
tests/Information/: Locale.cpp  LocaleComponents.cpp  NumberMetadata.cpp
tests/Parser/: CommentParser.cpp  FileParser.cpp  LineParser.cpp  Tokenizer.cpp
tests/Parser/Strings/: StringContent.cpp  StringParser.cpp
tests/Utils/: NumberMetadata.cpp  Util.cpp
